<resources>
    <string name="app_name">Almanac</string>
    <!-- Strings used for fragments for navigation -->
    <string name="yearly_view">Yearly View</string>
    <string name="monthly_view">Monthly View</string>
    <string name="weekly_view">Weekly View</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>

    <string name="particular_date">Take to a particular date</string>
    <string name="year_view_text">YEAR VIEW</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_text">Today</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THUR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="right_shift_button">Right Shift Button</string>
    <string name="left_shift_button">Left Shift Button</string>
    <string name="dummy_date">Dummy, XXXX</string>
    <string name="dummy_data">13</string>
    <string name="dummy_data2">XXXX</string>
</resources>